testdata/baselines/reference/submodule/compiler/emitMemberAccessExpression.errors.txt
emitMemberAccessExpression_file2.ts(6,29): error TS2339: Property 'KnockoutExtentions' does not exist on type '{ _Person: { new(): _Person; prototype: _Person; }; }'.


==== emitMemberAccessExpression_file3.ts (0 errors) ====
    /// <reference path="emitMemberAccessExpression_file2.ts" />
    /// <reference path="emitMemberAccessExpression_file1.ts" />
    declare var OData: any;
    module Microsoft.PeopleAtWork.Model {
        export class KnockoutExtentions {
        }
    }
==== emitMemberAccessExpression_file1.ts (0 errors) ====
    /// <reference path="emitMemberAccessExpression_file3.ts" />
    "use strict";
    
==== emitMemberAccessExpression_file2.ts (1 errors) ====
    /// <reference path="emitMemberAccessExpression_file3.ts" />
    "use strict";
    module Microsoft.PeopleAtWork.Model {
        export class _Person {
            public populate(raw: any) {
                var res = Model.KnockoutExtentions;
                                ~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'KnockoutExtentions' does not exist on type '{ _Person: { new(): _Person; prototype: _Person; }; }'.
            }
        }
    }
    